# rp

./: .gitattributes  .gitignore  LICENSE  README.md  environment-faf-paper.yml  pyproject.toml  requirements.txt  train.py  validate.py
recovery/historical_source/pre_20260709_training_snapshot/: README.md  RECOVERED_SOURCE_SUPERSET_NOTICE.md  environment-gpu.yml  pyproject.toml  test.py
recovery/historical_source/pre_20260709_training_snapshot/configs/: baseline_current.yaml  c3_farnet_full.yaml  c3_farnet_stage1_head_only.yaml  c3_farnet_stage2_tournament.yaml  c3_farnet_stage3_reliability.yaml
recovery/historical_source/pre_20260709_training_snapshot/scripts/: activate_faf_gpu.ps1  analyze_evidence_field.py  analyze_hd_texture_complementarity.py  analyze_high_error_feature_values.py  analyze_rscd_complete_factor_graph.py  analyze_rscd_complete_graph_patterns.py  analyze_rscd_factor_failure.py  analyze_rscd_feature_graph_patterns.py  analyze_rscd_label_graph.py  analyze_rscd_physics_cues.py  analyze_rscd_prediction_graph.py  analyze_rscd_run_graph_patterns.py  analyze_sota_gap_budget.py  audit_algorithm_modules.py  audit_candidate_loss_activation.py  audit_data.py  audit_dataset_image_style.py  audit_dataset_integrity_view.py  audit_external_segmentation_masks.py  audit_factor_graph_metric_batch_activation.py  audit_factor_graph_pair_sampler.py  audit_fair_comparison_protocol.py  audit_formal_candidate_protocol_controls.py  audit_formal_candidate_queue.py  audit_friction_interval_sources.py  audit_gpu_protocol.py  audit_input_canonicalization_style.py  (+442 more)
(+668 files in other folders)
